[LDR] Protect calls from LdrpCallInitRoutine and LdrpCallTlsInitializers with SEH. CORE-14532